--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2566,6 +2566,7 @@ input, select, textarea {
 		border: 0;
 		display: inline-block;
 		position: relative;
+		background-size: cover;
 	}
 
 		.image img {
