edited the images and the skills section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2567,6 +2567,7 @@ input, select, textarea {
 		display: inline-block;
 		position: relative;
 		background-size: cover;
+		padding: 5%;
 	}
 
 		.image img {
